# home_agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_extensions_and_schemas.py  0002_core_memory_todo_tables.py  0003_schedule_events_and_external_tokens.py  0004_session_device_columns.py  0005_session_scope.py  0006_files_attachments.py  0007_tasks_external_id_sync_state.py
backend/app/: main.py  scheduler.py
backend/app/agents/: base.py  files_agent.py  finance_agent.py  ideas_agent.py  ledger_agent.py  orchestrator.py  registry.py  schedule_agent.py  todo_agent.py
backend/app/api/: _chat_input.py  chat.py  deps.py  events.py  health.py  oauth.py  todo.py  todoist.py
backend/app/api/schemas/: chat.py  events.py  oauth.py  (+2 more)
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/services/: calendar_sync.py  chat_service.py  google_calendar.py  oauth_google.py  oauth_todoist.py  schedule_service.py  todo.py  todoist.py  todoist_sync.py
backend/scripts/: README.md  reset_db.py  seed_dev.py
backend/tests/: conftest.py  test_calendar_sync.py  test_chat_api.py  test_chat_service.py  test_conftest_sanity.py  test_events_api.py  test_google_calendar.py  test_models.py  test_oauth.py  test_oauth_todoist.py  test_orchestrator.py  test_schedule_agent.py  test_schedule_service.py  test_scheduler.py  test_scripts_reset_db.py  test_todo_agent_todoist.py  test_todoist_client.py  test_todoist_sync.py
(+62 files in other folders)
