[project]
name = "home-agent-backend"
version = "0.1.0"
description = "home_agent backend — FastAPI orchestrator + subagents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "pgvector>=0.3",
    "claude-agent-sdk>=0.1",
    "apscheduler>=3.10",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "testcontainers[postgres]>=4.8",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
